--- a/style.css
+++ b/style.css
@@ -119,3 +119,11 @@ form {
 .carta-status p {
     margin-bottom: 2rem;
 }
+
+@media screen and (max-width:768px){
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
